JumpScript/tests/baselines/reference/for-of2.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of2.jump(1,7): error TS1155: 'const' declarations must be initialized.
tests/cases/conformance/es6/for-ofStatements/for-of2.jump(2,6): error TS2540: Cannot assign to 'v' because it is a constant or a read-only property.


==== tests/cases/conformance/es6/for-ofStatements/for-of2.jump (2 errors) ====
    const v;
          ~
!!! error TS1155: 'const' declarations must be initialized.
    for (v of []) { }
         ~
!!! error TS2540: Cannot assign to 'v' because it is a constant or a read-only property.